# DogVerificationSystem

./: .gitignore  README.md  Readme.md  ablations.md  inference.py  main.py  pyproject.toml  train.py
pretrained_models/spkrec-ecapa-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
scripts/: download_data.py  download_models.py
src/backends/: __init__.py  base.py  cos.py  lda.py  mlp.py  plda.py
src/batch_sampler/: __init__.py  hpm.py
src/configs/: baseline.yaml  ecappa_tdnn.yaml  inference.yaml  x_vector.yaml
src/configs/backends/: all_backends.yaml  cos.yaml  mlp.yaml  plda.yaml
src/configs/batch_sampler/: hpm.yaml
src/configs/dataloader/: basic.yaml  example.yaml
src/configs/datasets/: all_datasets.yaml  barkopedia.yaml  custom.yaml  dog2vec.yaml
src/configs/metrics/: all_metrics.yaml  barkopedia.yaml  (+3 more)
src/datasets/: __init__.py  barkopedia.py  base_dataset.py  collate.py  concat_label_map_dataset.py  data_barkopedia.py  data_combine.py  data_custom_dir.py  data_dog2vec.py  data_utils.py  filter_dog2vec.py  test_backend.py  yandex_utils.py  youtube_utils.py
src/logger/: plot_3d.py  utils.py  wandb.py
src/loss/: __init__.py  aam_softmax.py  softmax.py
src/metrics/: __init__.py  base_metric.py  classification.py  confusion_matrix.py  dcf.py  eer.py  epoch_metric.py  static_tracker.py  tracker.py
src/model/: __init__.py  avex_model.py  baseline_mlp.py  baseline_model.py  dog2vec_feature_extractor.py  ecappa_tdnn.py  x_vector.py
src/trainer/: base_trainer.py  inferencer.py  trainer.py
src/transforms/: __init__.py  fbank_aug.py  mfcc.py  musan_noise.py  resample.py  rir_reverb.py
src/utils/: hydra_cfg.py  init_utils.py  optim_utils.py  plot_utils.py  torch_utils.py
(+23 files in other folders)
