[project]
name = "dogverificationsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "datasets>=4.8.2",
    "hydra-core>=1.3.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]
